--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: A workflow for linting a LaTeX file
+name: TeX Linter
 on: pull_request
 jobs:
   lint:
-    name: Lint with chktex
+    name: Run chktex
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
