simplify docker file to just use chktex without texlive

--- a/chktex/Dockerfile
+++ b/chktex/Dockerfile
@@ -1,13 +1,15 @@
-FROM dockershelf/latex:basic
+FROM debian:jessie
 
 LABEL "com.github.actions.name"="LaTeX linter (chktex)"
 LABEL "com.github.actions.description"="Detect mistakes in a LaTeX document"
 LABEL "com.github.actions.icon"="edit"
 LABEL "com.github.actions.color"="yellow"
 
-LABEL "repository"="http://github.com/j2kun/latex-lint-action"
+LABEL "repository"="http://github.com/j2kun/chktex-action"
 LABEL "homepage"="http://github.com/j2kun"
 LABEL "maintainer"="Jeremy Kun <j2kun@users.noreply.github.com>"
+
+RUN apt-get update && apt-get install -y chktex
 
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
