--- a/.github/workflows/formatting-and-linting.yml
+++ b/.github/workflows/formatting-and-linting.yml
@@ -13,10 +13,14 @@ jobs:
           python-version: 3.13
       - name: Install Packages
         run: |
-          python3 -m pip install --upgrade pip
-          pip install pylint
+          python3 -m pip install --upgrade pip poetry
+          poetry install
       - name: Run Black
         uses: psf/black@stable
+      - name: Run isort
+        uses: isort/isort-action@v1
+      - name: Run mypy
+        run: mypy
       - name: Run Flake8
         uses: py-actions/flake8@v2
       - name: Run Pylint
